# rp_2324_project

./: LICENSE  README.md  terminal-to-run.txt  usefull-ros-commands.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/display_map/: build.check.010.log.stderr  build.check.011.log.stderr  build.loadenv.180.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr
logs/initial_guess/: build.check.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr
logs/initial_pose/: build.make.146.log.stderr
logs/pose_handler/: build.check.065.log.stderr  build.check.073.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.014.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.022.log.stderr  build.make.024.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  (+41 more)
src/pose_handler/src/rp_base/: CMakeLists.txt  dmap.cpp  dmap.h  dmap_test.cpp  draw_helpers.cpp  draw_helpers.h  grid.cpp  grid.h  grid_map.cpp  grid_map.h  grid_map_test.cpp  grid_mapping.cpp  grid_mapping.h  laser_scan.cpp  laser_scan.h
(+84 files in other folders)
